<?xml version="1.0" encoding="utf-8"?>
<!-- Advanced settings screen: opened as a separate screen from the Settings tab. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="source_cat" android:title="@string/pref_cat_source">
        <EditTextPreference
            android:key="rom_json_url"
            android:title="@string/pref_json_url_rom"
            android:dialogTitle="@string/pref_json_url_rom_dialog"
            android:summary="@string/pref_json_url_rom_summary" />
        <EditTextPreference
            android:key="ota_json_url"
            android:title="@string/pref_json_url_ota"
            android:dialogTitle="@string/pref_json_url_ota_dialog"
            android:summary="@string/pref_json_url_ota_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_background">
        <ListPreference
            android:key="update_interval"
            android:title="@string/pref_check_interval"
            android:summary="@string/pref_check_interval_summary"
            android:entries="@array/update_interval_labels"
            android:entryValues="@array/update_interval_values"
            android:defaultValue="86400000" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_maintenance">
        <Preference
            android:key="reset"
            android:title="@string/pref_reset"
            android:summary="@string/pref_reset_summary" />
    </PreferenceCategory>
</PreferenceScreen>